--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <!-- your code here! -->
       <header>
         <h1>
-          <a href="#">Zesty</a>
+          <a href="#">Zetsy</a>
           </h1>
         <img src="./images/necklace.jpg" alt="Hand crafted Arizona Navajo Turquoise Stone Necklace">
       </header>
